<resources>
    <string name="app_name">Personal Medical Diary</string>
    <string name="app_name_caps">MEDICAL DIARY</string>
    <string name="textview">TextView</string>
    <string name="editButton">Edit</string>
    <string name="saveButton">Save</string>
    <string name="patientProfileTitle">Patient Profile</string>
    <string name="details">Details</string>
    <string name="button">Button</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bloodType">Blood Type</string>
    <string name="medication">Medication</string>
    <string name="allergies">Allergies</string>
    <string name="medicalHistory">Medical History</string>
    <string name="familyHistory">Family History</string>
    <string name="empty">N/A</string>
    <string name="fname">First Name: </string>
    <string name="lname">Last Name: </string>
    <string name="phone">Phone: </string>
    <string name="email">Email: </string>
    <string name="carevigerInfo">Caregiver Info</string>
    <string name="caregivers">Caregivers</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="register">Create account</string>
    <string name="patientProfileButton">Patient Profile</string>
    <string name="medicalRecordsButton">Medical Records</string>
    <string name="assessmentsButton">Assessments</string>
    <string name="createAssessmentButton">Create Assessment</string>
    <string name="nextButton">Next</string>
    <string-array name="assessments_array">
        <item>COVID Assessment</item>
    </string-array>
    <string name="logoutBtn">Logout</string>
    <string name="openRegisterScreen">Create an account!</string>
    <string name="assessmentTypeTextView">Assessment Type</string>
    <string name="add_medical_record">Add new Medical Record</string>
    <string name="created_at">Created At: </string>
    <string name="medical_record_type">Medical Record Type: </string>
    <string name="file_type">File Type: </string>
    <string name="openForgotPassword">Forgot Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="deleteButton">Delete</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
</resources>