<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.caregiver.CaregiverEditActivity">

    <TextView
        android:id="@+id/textViewFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editTextFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:text="" />

    <TextView
        android:id="@+id/textViewLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lname"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editTextLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:text="" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/caregiverSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButton" />

</LinearLayout>