<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".activities.profile.PatientProfileDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="188dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:text="@string/details"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/editPatientProfileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/editButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewHeightLabel"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/height"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewHeightValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewBloodTypeLabel"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bloodType"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewBloodTypeValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewWeightLabel"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewWeightValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtViewMedicationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/medication"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewMedicationValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtViewAllergiesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/allergies"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewAllergiesValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtViewMedicalHistoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/medicalHistory"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewMedicalHistoryValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtViewFamilyHistoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/familyHistory"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtViewFamilyHistoryValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/caregiverButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carevigerInfo" />

                <TextView
                    android:id="@+id/textViewTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>