<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.caregiver.CaregiverDetailsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewTitle"
                    android:layout_width="188dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editCaregiverBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/editButton"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewFNameLabel"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fname"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewFNameValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewLNameLabel"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lname"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewLNameValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewPhoneLabel"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewPhoneValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewEmailLabel"
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewEmailValue"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>